# ChangeLog for dev-java/icedtea
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.110 2013/11/21 13:33:03 kensington Exp $

  21 Nov 2013; Michael Palimaka <kensington@gentoo.org> icedtea-7.2.3.12.ebuild,
  icedtea-7.2.4.3.ebuild:
  Pin virtual/jpeg SLOT to 0.

  11 Nov 2013; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.4.3.ebuild:
  Depend on the newly introduced icedtea7 flag for icedtea-web:0

  30 Oct 2013; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.4.3.ebuild:
  Bump lcms dep to >=2.5 due to configure checks. Thanks to 'nacon' for
  reporting on IRC.

  27 Oct 2013; Vlastimil Babka <caster@gentoo.org> icedtea-7.2.4.3.ebuild:
  Allow switching to the new shared icedtea-web:0

*icedtea-7.2.4.3 (27 Oct 2013)

  27 Oct 2013; Vlastimil Babka <caster@gentoo.org> +icedtea-7.2.4.3.ebuild:
  Version bump, security bug #489570. Icedtea-6 allowed again for building.
  USE=jbootstrap no longer default, disabling leads to much faster builds.

  09 Sep 2013; Rick Farina <zerochaos@gentoo.org> -icedtea-7.2.3.8.ebuild,
  -icedtea-7.2.3.9.ebuild:
  removing insecure ebuilds per bug https://bugs.gentoo.org/477210

*icedtea-7.2.3.12 (09 Sep 2013)

  09 Sep 2013; Rick Farina <zerochaos@gentoo.org> +icedtea-7.2.3.12.ebuild,
  metadata.xml:
  pulling new icedtea from overlay into main tree in the hopes of getting
  functional arm support

  27 Aug 2013; Michael Palimaka <kensington@gentoo.org> icedtea-6.1.12.4.ebuild,
  icedtea-6.1.12.5.ebuild, icedtea-6.1.12.6.ebuild, icedtea-7.2.3.8.ebuild,
  icedtea-7.2.3.9.ebuild, icedtea-7.2.4.1.ebuild:
  Pin virtual/jpeg SLOT to 0.

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org> icedtea-7.2.3.9.ebuild:
  Whitespace

  23 Jul 2013; Vlastimil Babka <caster@gentoo.org> icedtea-6.1.12.6.ebuild,
  icedtea-7.2.4.1.ebuild:
  Depend on >=icedtea-web-1.3.2 to prevent breakage, see