@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX fontconfig.Gentoo.properties.src 15602 SHA256 d48a9b43d82f45425464e985955f3f3700738a98c0dc97ab7577230ca11fe647 SHA512 eac3fd310bf0757284a4a0c3c72759a8516bd2d9b8f9d9c7df10ff15fd291833d5adb5429b166175c6f333c883974d56fe7d0339cc16db3a5786a77780217a39 WHIRLPOOL f9f702848c38ef9cca0577f1db5a7c4cd6847e79d205b8e855c14b3a80070328b12fdcd854f5bd2dcf07c7cb9bd2aaf433a770a0752ec01a4e8b308dedf3bf19
 AUX generate-cacerts.pl 11051 SHA256 6ee6fb155e3fa85d0a7e9015b53ebd55948c6599d100fdb69b574b6d11f73433 SHA512 22d1be675362c09ed61af4dc3ece14cab81e9514937d588ff5d324e61b7eba7d3dd99b26bc5ec0953365de56d099f708b2afdb13cca37bc4ff07fd8ce31fbe97 WHIRLPOOL ad0e7946b1f055542f8a76b1050ae841bc7b6498305def9881d2f5d2177a82b77d25bf20e97488e2c84bbe0c3834421caea7e5bf4ea990c783908bc19133e619
@@ -39,6 +39,7 @@ DIST icedtea-2.4.3.tar.xz 3417116 SHA256 9289d25867b39756d62ba16eda5834655609a69
 DIST icedtea6-1.12.4.tar.gz 6689142 SHA256 eb326c6ae0147ca4abe4bd79e52c1edc2ef08e5e008230e24bee3abb39e14dda SHA512 f7d2834edd051b2080acd596d230f16604eb616eb1a6a0813dd274a92c7ad9711a25b65dacea06a12591c6121beedac44f9bdeb2e6cb60fb612bdeea63957a55 WHIRLPOOL 6109ed8cc94ee4e14882f0b787ac1a8a4859c542b7f92b896e46a33bbef5ef1cac532bb54616dcee66deff4d6fc50296f533f0979d7efe31f98ddd42a3d8c60c
 DIST icedtea6-1.12.5.tar.gz 13044886 SHA256 c61d6eb2f98d5c4059bb6eb6d808dd0954cf7d35c14290e5c77c3d7db75d2b35 SHA512 c8356216b4ed03630ebe338b790d6cb594dc24da5fe2df2740f4fb0e2034d19fd3b25025b1abf2ceb0cd656e8a08fec1f1455caeb450bd75fc29ebdddf9ab766 WHIRLPOOL 64e225c255c3645e6a126a3a6729b42ddda7f84a1e38397be801966203eb2c13903cc170f1b6c807c4ce0c15234f0ff8b857913bc0cf4231b0ebe5ac0f4db06c
 DIST icedtea6-1.12.6.tar.gz 13721847 SHA256 18d98fd05ef8d5088b09c444e0b025a8295181c6ae2efb6ebefe0a0397062865 SHA512 a6e35936e8542f86ec41f1171f6ac1bf504313c6f163f0de400a8f8fd587d0758b9c73cb391fff77da2c26bcd3150d911f3e529e48dc7e2db964482c4adcbce0 WHIRLPOOL 8c710e29c12191f9b17313dcefeaec7afce1eedc831dcaa8cec20baf94eabfe57190206733401875f0672fdad6fe94e978ef4154813b14b2fe9b22d2bb80ddac
+DIST icedtea6-1.12.7.tar.xz 9219124 SHA256 56e180666f9c6a38aa725033b60bbdf5bf4f652ad9f6876eedc56a27497158a8 SHA512 32b5af24e48c5265efac53fd44312433a0014325a1f74eb62fdde1562e8cfc8508dcf08c29fcbde1a14ae54213459b826772dfbf12d1460ecd3435cb1e89213d WHIRLPOOL 4b497017a1e7712c25aa035168e93e5dcf4be93d6605954efeceacf1bfcb73738726bb955f0db46bc8a12f6ccdbb8ebcde335e2b648685e4291d13dfad68f38f
 DIST jamvm-0972452d441544f7dd29c55d64f1ce3a5db90d82.tar.gz 298435 SHA256 bfa706402ac934d24f7119eb78f6be65e91439a4b2e49dbcc21e288137808f03 SHA512 fa3428d8997f9696cce4fa32c9de677ef193bc12236ef8b431af647b57d26725f4a3019abc87ade0cf10c7d6a745c18eb78e8e126d6842e788c8cefcbd2b006d WHIRLPOOL d1ca7dc677b7abbd600262f30c2c3774f502ef661f3dca60d4664c87b50b9a90c808e106f607a1dde7b3f4cf44a7a4a9e647877a2cc3332866b6b2bd34eb2a2a
 DIST jaxp144_04.zip 5976385 SHA256 490f696218c1fed9cb180680af883fe309b414fec232e9cec19645e12ad0b43c SHA512 9090d37f62f57d3dd8fb5981e3ce4a1ae87f1ef19abdb9df4775df1a48419cd16016c025a65516cfe3329885ac164cc45e4204dbc8d03239d368ebc962c824a4 WHIRLPOOL 6646fc6cfc83fbc26aef79cc219e008ee28fe4cf649ec4fc0e5bff045dd76b737c1036631acc9439137a50c2ee33dc7534b2de914877d1b695a3741ca3e6b1c8
 DIST jdk6-jaf-b20.zip 71243 SHA256 78c7b5c9d6271e88ee46abadd018a61f1e9645f8936cc8df1617e5f4f5074012 SHA512 22fef9e0fdde82f141151d426d26316d7c23fd4cc2132ef191f38ea9420ebb3126670b0456ab4de83896307eab48bab0c46aaf0485f39e89cb57dac3215d499a WHIRLPOOL 2b02e883c7a2341ce927f402a9abc5a632a6718f713fbaa5c65133a0ac81a1a58a317b7e2028c309196805dc43146c591852c05144c64f2428938cb3ec4972d2
@@ -47,19 +48,16 @@ DIST openjdk-6-src-b27-26_oct_2012.tar.gz 45789350 SHA256 044c3877b15940ff04f8aa
 EBUILD icedtea-6.1.12.4.ebuild 9785 SHA256 ca80351cf69245760384b1cb9c9cf96f033c8a2ecdaa04a49662b30bdad2a8b4 SHA512 5e0548630c21f7d16127655e544d3e3719aa35e3cefe7a5808a001bec15d981e69d0619bad99122a585252157583e38fba34913f16027504b1564b53982744e6 WHIRLPOOL d887b2f529b3c154c9ae9d2e782a483fc43b179ed268fedf48b683e3e9268efd19bb15d3f414577b9873ce06dc945bf073f710c044b6e85523032e0cdeeb6769
 EBUILD icedtea-6.1.12.5.ebuild 9556 SHA256 8fb99e471917048a3827ad49dcf4f4c6e759b5a86cd6aee67523d5537531f709 SHA512 95d18636f903214e0b2f6f8d9140ab6589c7fb6c81b789473df8afea5fa9e002bc86b4a3b187b248b6a4164d69b7c1ff7603b62ac77908fc38d6ede1436d080b WHIRLPOOL 30e133456a28f3b1ecb9ef56b6b9e67e6ce27ca0947f594bdd88b1c78d011144ddec086a24b455277c6b2c1b41b0bb65521e63a9d7e9c7a7007572ebaa00af89
 EBUILD icedtea-6.1.12.6.ebuild 9575 SHA256 280e497062b28d149d017b0983c3581f0829861497bacc70f83ae4d214996157 SHA512 a362f993fa4680be11c23886b2bb5351aeee5546f177a03052e77367477a35aadcb050a93730e27db3e0b2c6146dbad6f55edf1b9c0998ad6793ecf536f53b05 WHIRLPOOL e226f1b1c9b308a627bebb23d299cd77c38f838d6cb3829c8f9daa0a1f0fee29777bced14fab2fc393ddb8eaf1c6cb98c572774031c5f69ddb4115f9d00a5dd0
+EBUILD icedtea-6.1.12.7.ebuild 9665 SHA256 2b2dc06c548a27c13771699763cce4b644b1f857f14f5a220298cf622083c70f SHA512 561a16c7ef41696efe059f482c99006ff2dff7bc8518c9829a62f400ba005ce96c23c5e4b0865edb8bf2e5a39d2f481ae2831055f98e07c36ed3f302167ffdcd WHIRLPOOL c6578dac3ee66491e7d7415a75f6d1d62f3eae2671b5473de1113fc9cd6c79ef1865bd1fd72a63c11f89efad3212b32bd3cf9f142899b9a8cecd94d844963077
 EBUILD icedtea-7.2.3.12.ebuild 12037 SHA256 9d40307586292e8bcfe63e9abb9b7e56f004123ba3e1cbc50e804a26b491ce73 SHA512 9e12a27a6be70db961f7173cfb93b903b285f50781b532441c54fde5ff083cc59bffbf9abf7e46e18b55c23100edc960c3a3cbdd91f0a20fd331c7e1c7fbc2a4 WHIRLPOOL 96fabdc11aa407554954cadb95ed7a5834ec47093561797721f10c9c8d00c30e3ee750f3fd8e1ea06f2c1b5f100c43236e1ce69533d1c90b85337eea40cb5309
 EBUILD icedtea-7.2.4.1.ebuild 11950 SHA256 193b5f8a4d5b505ea9c88e8c2246b26b3bd88896c7c17ac1a0e2b18c63c4f142 SHA512 8d1c288f5d059105579386fa78889500c5f0c7553e424dadf7719946264719a00b266123a2c4ace8ec4eee27d855017495e4fbac21248671c7b3f681664af79b WHIRLPOOL 027666a57e75e80aef922bd82e2a00d513d17502f95325f1c1f69f519dc7e7ab578d6788dbe46cbf60158b603946ee817a8bc1cd16231919dcb9024326fa7150
 EBUILD icedtea-7.2.4.3.ebuild 12225 SHA256 456cb3c62ce2bf07aa5335f306c8e0e02c7324f53938931b6b3e9d5656d2da8a SHA512 328c378160a81313f552051a9e4e3a405a7b6a064722d238ed0887dd46ded512b37edecc1ebc4d611dfe627148115177ff427154d5b763e1f55f3b24e567b3d4 WHIRLPOOL d675c21a6fbcee44d61f1765d32b5a41af36f90aa49bea78ee058ffd5e339aa4eb9094998f3781db0c0fbec806323f0baf0a7fd6610203507bda301d0e7e684f
-MISC ChangeLog 24601 SHA256 3abc8af7d486601cdffe521f8a2ae58fab3039f392c8912cf8ee11a67cd49a34 SHA512 edaba521cafcaa77d5e9be70d9543301d1a7a64498b8a13ee8578ceb86fd9e9ad988e943554bb41cbdf571dd59d320e079e96253281e1e0bfeecd2bd25ac30e2 WHIRLPOOL 3b76ef3ac078fcc3b0f752396e6ad453b57fae309204064d6d3c400282d0fa25c981edba3194fbba147e96c80dfc5f4efbf869a88871608984d031944f6dfcb0
+MISC ChangeLog 24971 SHA256 70f8f1799805425dca323c5fa1921b4223c1fc99f81dd2befc48b2ae8d90cb8a SHA512 5f333f4b2a2c989b2dceb7792db18c81370662e5339cc37cc583587bb57ff83c8a71c4eb55cd1d0e803e2711c1497df49d84290ae59d07257f748829502eca75 WHIRLPOOL 15a444a6a6c2ceab12718f1b96b273bddf23e424409a371e6a7edbd4e654fa8a78622ba3633a2d3c5fcdbd7d9e188340a757167c074f99cefc15bca5a0a90a35
 MISC metadata.xml 1625 SHA256 af543836956dfb8bb72b853eeb35ccac283110b000ef60bc8df1319938cfb347 SHA512 2d7bf08168dcbd24f5ae9420f0151274def1c5ec248e73e5e3f51cd9fe0273c44feca33eca7976fa1c7aa22f6046a938e77cdc3178b3e58d771949b61ee4fb20 WHIRLPOOL 6d4cd813a615f880efe0918b7bf4c87aeff76ccfd7b6e0b63379c176c7443d3067f99cac922ab98cf4bc980036f0f7f447ee9face14402b099c89f981ac059be
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSjgq6AAoJEMbwO6tnXQ0sDp0H/iUWSF7VbbaDapojiwADKQ2M
-SgRLPGl9qbTf/uHQgNYRuQypRr0DJcmyHvTgpCtR0atKIoNOB5EDdKWNgSPUXu8m
-IVvzW/gyPm1plA6b0KgEJDn/AHZOcVp0/rlYze+45/g+fw5yD/UPgRKp4WTu5qqz
-EvzVTsX5S3MbuJnYI74Qd4vl3CQMEGSHZQaFsRIrjoB9aNnMCCfh5oPQE253kWmd
-9taKMD/m3dW19knyd176oGzmxqJy5kIZevv+avATSozYcHrS525dt7+mvjpjkbBY
-7068IPKa66cB015tncgYk1ILk3pqXz+IELkuL8ourBIlaNJ7H1MyVwl1wzLblVA=
-=30QV
+iEYEAREKAAYFAlKmRMkACgkQtbrAj05h3oQvtQCeIdpqGpR8mAX/v6rTPWIy907v
+i6UAn1yA0nMQUXz54utgqN/I8qSKM4SC
+=X+/C
 -----END PGP SIGNATURE-----
