@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare prerm setup test unpack
+DEPEND=>=media-libs/giflib-4.1.6 >=media-libs/libpng-1.2 >=sys-libs/zlib-1.2.3 virtual/jpeg:0 javascript? ( dev-java/rhino:1.6 ) nss? ( >=dev-libs/nss-3.12.5-r1 ) pulseaudio? ( >=media-sound/pulseaudio-0.9.11 ) systemtap? ( >=dev-util/systemtap-1 ) >=media-libs/alsa-lib-1.0 >=net-print/cups-1.2.12 dev-libs/glib >=media-libs/freetype-2.3.5 >=x11-libs/gtk+-2.8:2 >=x11-libs/libX11-1.1.3 >=x11-libs/libXext-1.1.1 >=x11-libs/libXi-1.1.3 >=x11-libs/libXrender-0.9.4 >=x11-libs/libXtst-1.0.3 || ( >=dev-java/gcj-jdk-4.3 dev-java/icedtea-bin:6 dev-java/icedtea:6 ) app-arch/cpio app-arch/unzip app-arch/zip app-misc/ca-certificates >=dev-java/ant-core-1.8.1 dev-java/ant-nodeps dev-lang/perl >=dev-libs/libxslt-1.1.26 dev-libs/openssl virtual/pkgconfig sys-apps/lsb-release >=x11-libs/libXau-1.0.3 >=x11-libs/libXdmcp-1.0.2 >=x11-libs/libXinerama-1.0.2 x11-proto/inputproto >=x11-proto/xextproto-7.1.1 x11-proto/xineramaproto x11-proto/xproto pax_kernel? ( sys-apps/paxctl ) >=dev-java/java-config-2.1.9-r1 =dev-java/java-config-2* || ( app-admin/eselect-java <dev-java/java-config-2.2 ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DESCRIPTION=A harness to build OpenJDK using Free Software build tools and dependencies
+EAPI=5
+HOMEPAGE=http://icedtea.classpath.org
+IUSE=+X +alsa cacao cjk +cups debug doc examples javascript jbootstrap +nsplugin +nss pax_kernel pulseaudio +source systemtap test +webstart elibc_FreeBSD test
+KEYWORDS=~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86
+LICENSE=Apache-1.1 Apache-2.0 GPL-1 GPL-2 GPL-2-with-linking-exception LGPL-2 MPL-1.0 MPL-1.1 public-domain W3C
+PDEPEND=webstart? ( || ( dev-java/icedtea-web:0 >=dev-java/icedtea-web-1.3.2:6 ) ) nsplugin? ( || ( dev-java/icedtea-web:0[nsplugin] >=dev-java/icedtea-web-1.3.2:6[nsplugin] ) )
+RDEPEND=>=media-libs/giflib-4.1.6 >=media-libs/libpng-1.2 >=sys-libs/zlib-1.2.3 virtual/jpeg:0 javascript? ( dev-java/rhino:1.6 ) nss? ( >=dev-libs/nss-3.12.5-r1 ) pulseaudio? ( >=media-sound/pulseaudio-0.9.11 ) systemtap? ( >=dev-util/systemtap-1 ) !dev-java/icedtea6 X? ( dev-libs/glib >=media-libs/freetype-2.3.5 >=x11-libs/gtk+-2.8:2 >=x11-libs/libX11-1.1.3 >=x11-libs/libXext-1.1.1 >=x11-libs/libXi-1.1.3 >=x11-libs/libXrender-0.9.4 >=x11-libs/libXtst-1.0.3 media-fonts/dejavu cjk? ( media-fonts/arphicfonts media-fonts/baekmuk-fonts !ppc? ( !ppc64? ( media-fonts/lklug ) ) media-fonts/lohit-fonts media-fonts/sazanami ) ) alsa? ( >=media-libs/alsa-lib-1.0 ) cups? ( >=net-print/cups-1.2.12 ) >=dev-java/java-config-2.1.9-r1 =dev-java/java-config-2* || ( app-admin/eselect-java <dev-java/java-config-2.2 )
+SLOT=6
+SRC_URI=http://icedtea.classpath.org/download/source/icedtea6-1.12.7.tar.xz http://download.java.net/openjdk/jdk6/promoted/b27/openjdk-6-src-b27-26_oct_2012.tar.gz http://icedtea.classpath.org/download/drops/cacao/68fe50ac34ec.tar.gz -> icedtea-1.12-cacao-68fe50ac34ec.tar.gz http://icedtea.classpath.org/download/drops/jamvm/jamvm-0972452d441544f7dd29c55d64f1ce3a5db90d82.tar.gz -> icedtea-1.12-jamvm-0972452d441544f7dd29c55d64f1ce3a5db90d82.tar.gz
+_eclasses_=eutils	a82a329b538368791f5a6113c60e557e	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	java-vm-2	7dc6db7d110230640003e30e63a0b2bc	multilib	892e597faee02a5b94eb02ab512e7622	pax-utils	2424f959506320f5196de8f79fa05297	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=9bc2374d60877d7a8621299a4b243a2b
