@@ -1,6 +1,15 @@
 # ChangeLog for dev-java/icedtea
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.110 2013/11/21 13:33:03 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.111 2013/12/09 22:31:36 caster Exp $
+
+  09 Dec 2013; Vlastimil Babka <caster@gentoo.org> +icedtea-6.1.12.7.ebuild:
+  Version bump, security bug #489570.
+
+*icedtea-6.1.12.7 (08 Dec 2013)
+
+  08 Dec 2013; Vlastimil Babka <caster@gentoo.org> +icedtea-6.1.12.7.ebuild:
+  Version bump, security bug #489570. USE=jbootstrap no longer default, leads
+  to faster builds. Allow new icedtea-web:0 to satisfy nsplugin dep.
 
   21 Nov 2013; Michael Palimaka <kensington@gentoo.org> icedtea-7.2.3.12.ebuild,
   icedtea-7.2.4.3.ebuild:
